force-app/main/default/objects/Wines__c/Wines__c.object-meta.xml
<CustomObject>
    <label>Wines</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Wines</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>