force-app/main/default/objects/Wines__c/fields/alcohol__c.field-meta.xml
<CustomField>
    <fullName>alcohol__c</fullName>
    <label>alcohol</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>