force-app/main/default/objects/Wines__c/fields/chlorides__c.field-meta.xml
<CustomField>
    <fullName>chlorides__c</fullName>
    <label>chlorides</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>