force-app/main/default/objects/Wines__c/fields/citric_acid__c.field-meta.xml
<CustomField>
    <fullName>citric_acid__c</fullName>
    <label>citric acid</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>