force-app/main/default/objects/Wines__c/fields/density__c.field-meta.xml
<CustomField>
    <fullName>density__c</fullName>
    <label>density</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>