force-app/main/default/objects/Wines__c/fields/EPB_Prediction__c.field-meta.xml
<CustomField>
    <fullName>EPB_Prediction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EPB Prediction</label>
    <length>30</length>
    <type>Text</type>
</CustomField>