force-app/main/default/objects/Wines__c/fields/fixed_acidity__c.field-meta.xml
<CustomField>
    <fullName>fixed_acidity__c</fullName>
    <label>fixed acidity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>