force-app/main/default/objects/Wines__c/fields/pH__c.field-meta.xml
<CustomField>
    <fullName>pH__c</fullName>
    <label>pH</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>