force-app/main/default/objects/Wines__c/fields/Qualitative__c.field-meta.xml
<CustomField>
    <fullName>Qualitative__c</fullName>
    <formula>if (blankvalue(quality__c,0)==0,&apos;Not Evaluated&apos;,IF(quality__c&gt;=7,&apos;Good Quality Wine&apos;,&apos;Bad Quality Wine&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Quality</label>
    <type>Text</type>
</CustomField>