force-app/main/default/objects/Wines__c/fields/Qualitative_ML_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Qualitative_ML_Prediction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Predicted Quality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>