force-app/main/default/objects/Wines__c/fields/quality__c.field-meta.xml
<CustomField>
    <fullName>quality__c</fullName>
    <label>Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>