force-app/main/default/objects/Wines__c/fields/residual_sugar__c.field-meta.xml
<CustomField>
    <fullName>residual_sugar__c</fullName>
    <label>residual sugar</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>