force-app/main/default/objects/Wines__c/fields/score2__c.field-meta.xml
<CustomField>
    <fullName>score2__c</fullName>
    <label>score2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>