force-app/main/default/objects/Wines__c/fields/sulphates__c.field-meta.xml
<CustomField>
    <fullName>sulphates__c</fullName>
    <label>sulphates</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>