force-app/main/default/objects/Wines__c/fields/total_sulfur_dioxide__c.field-meta.xml
<CustomField>
    <fullName>total_sulfur_dioxide__c</fullName>
    <label>total sulfur dioxide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>