force-app/main/default/objects/Wines__c/fields/volatile_acidity__c.field-meta.xml
<CustomField>
    <fullName>volatile_acidity__c</fullName>
    <label>volatile acidity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>