force-app/main/default/objects/Wines__c/listViews/Actuals.listView-meta.xml
<ListView>
    <fullName>Actuals</fullName>
    <columns>NAME</columns>
    <columns>fixed_acidity__c</columns>
    <columns>volatile_acidity__c</columns>
    <columns>citric_acid__c</columns>
    <columns>residual_sugar__c</columns>
    <columns>chlorides__c</columns>
    <columns>free_sulfur_dioxide__c</columns>
    <columns>total_sulfur_dioxide__c</columns>
    <columns>density__c</columns>
    <columns>pH__c</columns>
    <columns>sulphates__c</columns>
    <columns>quality__c</columns>
    <columns>Qualitative_ML_Prediction__c</columns>
    <columns>Qualitative__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Qualitative__c</field>
        <operation>contains</operation>
        <value>Good,Bad</value>
    </filters>
    <label>Actuals and Predicted</label>
</ListView>