force-app/main/default/objects/Wines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>volatile_acidity__c</columns>
    <columns>citric_acid__c</columns>
    <columns>residual_sugar__c</columns>
    <columns>chlorides__c</columns>
    <columns>free_sulfur_dioxide__c</columns>
    <columns>total_sulfur_dioxide__c</columns>
    <columns>density__c</columns>
    <columns>pH__c</columns>
    <columns>sulphates__c</columns>
    <columns>quality__c</columns>
    <columns>Qualitative__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Score__c</columns>
    <columns>Qualitative_ML_Prediction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>